# adam_analyst_bot

./: .gitignore  Dockerfile  README.md  agent.py  bot.py  commands.py  common_prompts.py  config.yaml  custom_output_parser.py  data_analyst.py  data_description_ru.txt  helpers.py  loader.py  model.py  pyproject.toml  requirements.txt  settings.py
